Added all the dates and did the calculations for all of them and split them up by year and WestVSSouth

--- a/PV-4CP.ipynb
+++ b/PV-4CP.ipynb
@@ -30,6 +30,8 @@
    "outputs": [],
    "source": [
     "# read in db credentials from config/config.txt\n",
+    "# * make sure you add those to the config/config.txt file! *\n",
+    "\n",
     "database_config = get_database_config(\"./config/config.txt\")\n"
    ]
   },
@@ -54,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dates acquired from http://mis.ercot.com/misapp/GetReports.do?reportTypeId=13037&reportTitle=Planned%20Service%20Four%20Coincident%20Peak%20Calculations&showHTMLView=&mimicKey\n",
+    "# These are the ERCOT 4CP events for 2016 - 2019 acquired from\n",
+    "# http://mis.ercot.com/misapp/GetReports.do?reportTypeId=13037&reportTitle=Planned%20Service%20Four%20Coincident%20Peak%20Calculations&showHTMLView=&mimicKey\n",
     "\n",
     "event_start_dates = ['2019-06-19 17:00:00-05', '2019-07-30 16:30:00-05', '2019-08-12 17:00:00-05', '2019-09-06 16:45:00-05',\n",
     "               '2018-06-27 17:00:00-05', '2018-07-19 17:00:00-05', '2018-08-23 16:45:00-05', '2018-09-19 16:30:00-05',\n",
@@ -73,7 +76,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataids, pv direction, amount of PV of solar homes\n",
+    "# Select the dataids, pv direction, amount of PV of solar homes\n",
+    "# we're selecting homes with just South and West facing PV that have data between the first event and the last event\n",
+    "\n",
+    "###### AAAAAH I should probably check on 1 min availabililty percentange here as well.\n",
+    "##### TODO!\n",
+    "\n",
     "query = \"\"\"\n",
     "select dataid, pv, pv_panel_direction, total_amount_of_pv, amount_of_west_facing_pv, amount_of_south_facing_pv\n",
     "from other_datasets.metadata\n",
@@ -100,6 +108,7 @@
     "# grab dataids and convert them to a string to put into the SQL query\n",
     "dataids_list = df['dataid'].tolist()\n",
     "dataids_list\n",
+    "print(\"{} dataids selected listed here:\".format(len(dataids_list)))\n",
     "dataids_str = ','.join(list(map(str, dataids_list)))\n",
     "dataids_str"
    ]
@@ -110,21 +119,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate usage grid minus solar (which is actually grid + solar because solar is negative use)\n",
+    "# Assemble the SQL query to pull the data for the selected dataids\n",
     "# \n",
+    "first_start = event_start_dates.pop(0)\n",
+    "first_end   = event_end_dates.pop(0)\n",
     "query_2 = \"\"\"\n",
     "select dataid, localminute, solar, grid from electricity.eg_realpower_1min \n",
-    "where localminute >= '2019-06-19 17:00:00-05' and localminute <= '2019-06-19 17:15:00-05'\n",
-    "and dataid in \"\"\"\n",
+    "where ((localminute >= '{}' and localminute <= '{}') \"\"\".format(first_start, first_end)\n",
     "\n",
-    "query_2 = query_2 + \"({})\".format(dataids_str)\n",
-    "print(query_2)\n",
+    "for start, end in zip(event_start_dates, event_end_dates):\n",
+    "    query_2 = query_2 + \"OR (localminute >= '{}' and localminute <= '{}') \".format(start, end)\n",
+    "\n",
+    "query_2 = query_2 + \"\"\" ) AND dataid in ({})\"\"\".format(dataids_str)\n",
+    "\n",
+    "# here's what that query is\n",
+    "print(\"sql query is \\n\" + query_2)\n",
     "\n",
     "# create a dataframe with the data from the sql query\n",
     "df2 = pd.read_sql_query(sqla.text(query_2), engine)\n",
     "\n",
-    "# Calculate the difference and add is as a new column\n",
-    "df2['solar+grid'] = df2.apply(lambda row: row.solar + row.grid, axis=1)\n",
+    "# calculate usage as grid minus solar (which is actually grid + solar because solar is negative use)\n",
+    "# Calculate the difference with a lambda function and add it as a new column called 'usage'\n",
+    "df2['usage'] = df2.apply(lambda row: row.solar + row.grid, axis=1)\n",
     "df2.head(15)"
    ]
   },
@@ -134,8 +150,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# group by dataid and average(?) the values\n",
-    "grouped = df2.groupby(['dataid']).mean()\n",
+    "# convert localminute to pandas datetime type\n",
+    "df2['datetime'] = pd.to_datetime(df2['localminute'])\n",
+    "\n",
+    "# and set as index\n",
+    "df2 = df2.set_index('datetime')\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group by month and dataid and take the mean of solar, grid, and usage within those groups\n",
+    "grouped = df2.groupby([pd.Grouper(freq='M'), 'dataid']).mean()\n",
     "grouped"
    ]
   },
@@ -145,9 +175,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's bring in the metadata on the dataids\n",
-    "joined = pd.merge(grouped, df, on='dataid')\n",
-    "joined"
+    "# map pv direction onto dataids with a merge after resetting the index\n",
+    "grouped = grouped.reset_index()\n",
+    "grouped = grouped.merge(df, how='left', left_on='dataid', right_on='dataid')\n",
+    "grouped"
    ]
   },
   {
@@ -156,8 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "west_vs_south = joined.groupby(['pv_panel_direction']).mean()\n",
-    "west_vs_south"
+    "# reindex by the date\n",
+    "grouped = grouped.set_index('datetime')\n",
+    "grouped"
    ]
   },
   {
@@ -165,7 +197,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# regroup by year and pv_panel_direction and average the values\n",
+    "year_west_vs_south = (grouped.groupby([pd.Grouper(freq='Y'),'pv_panel_direction']).mean())\n",
+    "# we don't need a mean of the dataids, so we can drop that column now\n",
+    "year_west_vs_south = year_west_vs_south.drop(columns=['dataid'])\n",
+    "year_west_vs_south"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# despite the higher in-home usage in the west facing houses (usage) the solar production is so high that it is still putting power back on the grid (grid is smaller or even negative in most cases in West facing homes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now just drop unneeded columns and rearrange them and simplify the view\n",
+    "year_west_vs_south = year_west_vs_south.reset_index()\n",
+    "year_west_vs_south['year'] = pd.DatetimeIndex(year_west_vs_south['datetime']).year\n",
+    "year_west_vs_south = year_west_vs_south[['year', 'pv_panel_direction','solar', 'grid', 'usage']]\n",
+    "year_west_vs_south = year_west_vs_south.set_index('year')\n",
+    "year_west_vs_south"
+   ]
   }
  ],
  "metadata": {
