Added chart to end.

--- a/PV-4CP.ipynb
+++ b/PV-4CP.ipynb
@@ -15,12 +15,22 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
     "from config.read_config import get_database_config\n",
     "import sys\n",
     "sys.executable  # shows you your path to the python you're using"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -90,8 +100,14 @@
     "and grid is not null \n",
     "and solar is not null\n",
     "and pv_panel_direction in ('South', 'West')\n",
-    "and egauge_1min_min_time < '2016-09-19'\n",
-    "and egauge_1min_max_time > '2019-06-19'\n",
+    "and egauge_1min_min_time < '2016-06-15'\n",
+    "and egauge_1min_max_time > '2019-09-06'\n",
+    "and (egauge_1min_data_availability = '100%'\n",
+    "OR egauge_1min_data_availability = '99%'\n",
+    "OR egauge_1min_data_availability = '98%'\n",
+    "OR egauge_1min_data_availability = '97%'\n",
+    "\n",
+    ")\n",
     "\"\"\"\n",
     "\n",
     "# create a dataframe with the data from the sql query\n",
@@ -142,6 +158,15 @@
     "# Calculate the difference with a lambda function and add it as a new column called 'usage'\n",
     "df2['usage'] = df2.apply(lambda row: row.solar + row.grid, axis=1)\n",
     "df2.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.dropna()"
    ]
   },
   {
@@ -225,6 +250,24 @@
     "year_west_vs_south = year_west_vs_south.set_index('year')\n",
     "year_west_vs_south"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.pyplot import figure\n",
+    "plot = year_west_vs_south.plot(kind='bar',figsize=(25,15), title=\"Solar production, Net Grid Usage (home usage from the grid minus solar production), and Home Usage During ERCOT 4CP events\")\n",
+    "labels = plot.set_xticklabels(['2016-S', '2016-W', '2017-S', '2017-W', '2018-S', '2018-W', '2019-S', '2019-W'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
