--- a/hvac_4cp.ipynb
+++ b/hvac_4cp.ipynb
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot summer\n",
+    "#plot bar chart\n",
     "homes_on_percindex.plot.bar(x='Date', y='Percentage',figsize=(20,10),color='orange',title=\"Home's cooling alignment with Texas CP events\")\n",
     "plt.show()"
    ]
