updated as per review comments

--- a/hvac.ipynb
+++ b/hvac.ipynb
@@ -257,6 +257,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From above results we can see that 18% of HVAC energy load in summer is powered by the home’s rooftop solar."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -320,6 +327,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "14% of HVAC energy load in Fall is powered by the home’s rooftop solar."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -378,6 +392,14 @@
     "\n",
     "hvac_powered_by_solar_spring = (solar_hvac_spring/total_hvac_spring)*100\n",
     "hvac_powered_by_solar_spring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "21% of HVAC energy load in spring is powered by the home’s rooftop solar. \n",
+    "This is also the highest among all four seasons."
    ]
   },
   {
