Little formatting updates and added more text.

--- a/water and energy.ipynb
+++ b/water and energy.ipynb
@@ -1,21 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import psycopg2\n",
-    "import sqlalchemy as sqla\n",
-    "import csv\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import sys\n",
-    "%matplotlib inline\n",
-    "sys.executable  # shows you your path to the python you're using"
+    "# Water and energy use correlation notebook:\n",
+    "\n",
+    "### Here we will explore whether there is a relationship between water use and electricity use in our home network.\n",
+    "\n",
+    "We've already exported the electricty and water data to a file in our JupyterHub's shared filesystem which is mounted in your home directory at `~/shared/`, our methodology for extracting the data is as follows:\n",
+    "\n",
+    "To find correlation between home's energy use and water use, Blucube water data from dataport (water_and_gas.blucube_water_data) and 1-minute interval energy (electricity.eg_realpower_1min) data was used. Blucube data consists of the cumulative device reading (in gallons), so the water usage has been calculated for each interval by subtracting current interval reading from previous interval. After calculating delta usage, only those time intervals with a delta greater than 0 were included in the dataset. This data has then been joined with energy data to find how much electricity was used in those same time intervals when water was used in a home.\n"
    ]
   },
   {
@@ -24,9 +19,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read processed Data. Blucube water data from dataport has been processed to calculate delta \n",
-    "#water usage for each minute interval. Only those intervals have been considered where water usage > 0.\n",
-    "data = pd.read_csv('/Users/esha/Downloads/elec_water_data.csv')\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import csv\n",
+    "import os\n",
+    "import sys\n",
+    "%matplotlib inline\n",
+    "print(sys.version) # prints the python version\n",
+    "print(sys.executable)  # prints the path to the python you're using"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read processed Data. Blucube water data from dataport has been processed to calculate delta \n",
+    "# water usage for each minute interval. Only those intervals have been considered where water usage > 0.\n",
+    "data = pd.read_csv('~/shared/elec_water_data.csv')\n",
     "homes_list = data.dataid.unique() \n",
     "homes_list"
    ]
@@ -37,9 +48,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Function to calculate average\n",
-    "def Average(lst): \n",
-    "    return sum(lst) / len(lst) "
+    "# Loop through list of homes and find correlation between water and electricity usage and also plot the datapoints\n",
+    "homes_cor = []\n",
+    "for home in homes_list:\n",
+    "    data_to_process = data.loc[(data['dataid'] == home)]\n",
+    "    x = data_to_process[\"water_use\"]\n",
+    "    y = data_to_process[\"elec_use\"]\n",
+    "    correlation = round(x.corr(y),3)\n",
+    "    homes_cor.append(correlation)\n",
+    "    print(str(home) + ' -> ' + str(correlation))\n",
+    "    plt.scatter(x, y, edgecolors='black')\n",
+    "    plt.title('Correlation for home {}'.format(home))\n",
+    "    plt.xlabel('Water Use')\n",
+    "    plt.ylabel('Energy Use')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -48,27 +70,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loop through list of homes and find correlation between water and electricity usage and also plot the datapoints\n",
-    "homes_cor = []\n",
-    "for home in homes_list:\n",
-    "    data_to_process = data.loc[(data['dataid'] == home)]\n",
-    "    x = data_to_process[\"water_use\"]\n",
-    "    y = data_to_process[\"elec_use\"]\n",
-    "    correlation = round(x.corr(y),3)\n",
-    "    homes_cor.append(correlation)\n",
-    "    print(str(home) + '->' + str(correlation))\n",
-    "    plt.scatter(x, y)\n",
-    "    plt.show()\n",
     "avg_cor = Average(homes_cor)   \n",
-    "print(\"Average correlation for all homes - \",avg_cor)"
+    "print(\"Average correlation for all homes - \", statistics.mean(homes_cor))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From above plots and calculated average correlation we can say that water and electricity \n",
-    "usage is very less positively correlated."
+    "## Conclusion:\n",
+    "### From above plots and calculated average correlation we can say that water and electricity usage is *not* positively correlated."
    ]
   }
  ],
@@ -88,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
