Fixed a couple of oversights.

--- a/Water_vs_Energy.ipynb
+++ b/Water_vs_Energy.ipynb
@@ -24,6 +24,7 @@
     "import csv\n",
     "import os\n",
     "import sys\n",
+    "import statistics\n",
     "%matplotlib inline\n",
     "print(sys.version) # prints the python version\n",
     "print(sys.executable)  # prints the path to the python you're using"
@@ -70,8 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avg_cor = Average(homes_cor)   \n",
-    "print(\"Average correlation for all homes - \", statistics.mean(homes_cor))"
+    "print(\"Average correlation for all homes: \", statistics.mean(homes_cor))"
    ]
   },
   {
