Updated the path to the exported/shared file.

--- a/Water_vs_Energy.ipynb
+++ b/Water_vs_Energy.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "# Read processed Data. Blucube water data from dataport has been processed to calculate delta \n",
     "# water usage for each minute interval. Only those intervals have been considered where water usage > 0.\n",
-    "data = pd.read_csv('~/shared/elec_water_data.csv')\n",
+    "data = pd.read_csv('/shared/elec_water_data.csv')\n",
     "homes_list = data.dataid.unique() \n",
     "homes_list"
    ]
