changed for pre-processed data

--- a/hvac.ipynb
+++ b/hvac.ipynb
@@ -32,166 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in db credentials from config/config.txt\n",
-    "# * make sure you add those to the config/config.txt file! *\n",
-    "\n",
-    "database_config = get_database_config(\"./config/config.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get our DB connection\n",
-    "engine = sqla.create_engine('postgresql://{}:{}@{}:{}/{}'.format(database_config['username'],\n",
-    "                                                                     database_config['password'],\n",
-    "                                                                     database_config['hostname'],\n",
-    "                                                                     database_config['port'],\n",
-    "                                                                     database_config['database']\n",
-    "                                                                     ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Select a list of Texas homes from dataport metadata having AC and solar configured and also has data for year 2018.\n",
-    "query = \"\"\"select distinct dataid from other_datasets.metadata \n",
-    "                                          where air1='yes' and solar='yes' \n",
-    "                                          and egauge_1min_min_time < '2018-01-01' \n",
-    "                                          and egauge_1min_max_time > '2019-01-01'\n",
-    "                                          and state='Texas'\n",
-    "                                          and (egauge_1min_data_availability like '100%' \n",
-    "                                               or \n",
-    "                                               egauge_1min_data_availability like '99%');\n",
-    "         \"\"\"\n",
-    "\n",
-    "df = pd.read_sql_query(sqla.text(query), engine)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grab dataids and convert them to a string to put into the SQL query\n",
-    "dataids_list = df['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(dataids_list)))\n",
-    "dataids_str = ','.join(list(map(str, dataids_list)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Check data completeness for dataids selected from metadata above.\n",
-    "\n",
-    "query2 = \"\"\"select dataid,count(*) total_rec from electricity.eg_realpower_1min \n",
-    "            where dataid in ({})\"\"\".format(dataids_str)\n",
-    "query2 = query2 + \"\"\" and localminute >= '2018-01-01' and localminute < '2019-01-01' group by 1\"\"\"\n",
-    "\n",
-    "df2 = pd.read_sql_query(sqla.text(query2), engine)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#Select 50 homes with atleast 99% data availability for year 2018.\n",
-    "df2['perc'] = (df2['total_rec']/525600)*100\n",
-    "final_dataids = df2[df2['perc'] >= 99].head(50)\n",
-    "final_dataids['dataid'].count()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pull data for selected 50 homes.\n",
-    "final_dataids_list = final_dataids['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(final_dataids_list)))\n",
-    "final_dataids_str = ','.join(list(map(str, final_dataids_list)))\n",
-    "final_dataids_str\n",
-    "final_dataids_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create 4 dataframes, one for every season\n",
-    "\n",
-    "#summer\n",
-    "summer = \"\"\"select localminute::timestamp,air1,air2,furnace1,furnace2,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-06-01' and localminute <  '2018-09-01' \"\"\"\n",
-    "summer = summer + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
-    "\n",
-    "# create a dataframe with the data from the sql query\n",
-    "summer_df = pd.read_sql_query(sqla.text(summer), engine)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#winter\n",
-    "winter = \"\"\"select localminute::timestamp,air1,air2,furnace1,furnace2,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-12-01' and localminute <  '2019-03-01' \"\"\"\n",
-    "winter = winter + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
-    "\n",
-    "# create a dataframe with the data from the sql query\n",
-    "winter_df = pd.read_sql_query(sqla.text(winter), engine)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#spring\n",
-    "spring = \"\"\"select localminute::timestamp,air1,air2,furnace1,furnace2,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-03-01' and localminute <  '2018-06-01' \"\"\"\n",
-    "spring = spring + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
-    "\n",
-    "spring_df = pd.read_sql_query(sqla.text(spring), engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fall\n",
-    "fall = \"\"\"select localminute::timestamp,air1,air2,furnace1,furnace2,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-09-01' and localminute <  '2018-12-01' \"\"\"\n",
-    "fall = fall + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
-    "\n",
-    "fall_df = pd.read_sql_query(sqla.text(fall), engine)"
+    "#Read pre-processed data for June 2018 through August 2018\n",
+    "summer_df = pd.read_csv('/shared/hvac/summer.csv.gz',compression='gzip')"
    ]
   },
   {
@@ -261,6 +103,16 @@
    "metadata": {},
    "source": [
     "From above results we can see that 18% of HVAC energy load in summer is powered by the home’s rooftop solar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read pre-processed data for Sep 2018 through Nov 2018\n",
+    "fall_df = pd.read_csv('/shared/hvac/fall.csv.gz',compression='gzip')"
    ]
   },
   {
@@ -339,6 +191,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Read pre-processed data for march 2018 through may 2018\n",
+    "spring_df = pd.read_csv('/shared/hvac/spring.csv.gz',compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#data analysis for spring\n",
     "\n",
     "#replace null with 0's \n",
@@ -400,6 +262,16 @@
    "source": [
     "21% of HVAC energy load in spring is powered by the home’s rooftop solar. \n",
     "This is also the highest among all four seasons."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read pre-processed data for dec 2018 through feb 2019\n",
+    "winter_df = pd.read_csv('/shared/hvac/winter.csv.gz',compression='gzip')"
    ]
   },
   {
