changed for pre-processed data

--- a/hvac_4cp.ipynb
+++ b/hvac_4cp.ipynb
@@ -8,49 +8,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#import packages\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import psycopg2\n",
-    "import sqlalchemy as sqla\n",
-    "import os\n",
-    "from config.read_config import get_database_config\n",
-    "import numpy as np\n",
-    "import sys\n",
-    "%matplotlib inline\n",
-    "sys.executable  # shows you your path to the python you're using"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# read in db credentials from config/config.txt\n",
-    "# * make sure you add those to the config/config.txt file! *\n",
-    "\n",
-    "database_config = get_database_config(\"./config/config.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get our DB connection\n",
-    "engine = sqla.create_engine('postgresql://{}:{}@{}:{}/{}'.format(database_config['username'],\n",
-    "                                                                     database_config['password'],\n",
-    "                                                                     database_config['hostname'],\n",
-    "                                                                     database_config['port'],\n",
-    "                                                                     database_config['database']\n",
-    "                                                                     ))"
+    "To prepare the data we selected 50 Texas homes with PV and hvac system. We used 1 minute energy(from electricity.eg_realpower_1min) data for the selected homes for the CP dates mentioned below."
    ]
   },
   {
@@ -79,15 +40,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select homes with solar and hvac configured in Texas. \n",
-    "\n",
-    "query = \"\"\"select dataid from other_datasets.metadata \n",
-    "           where air1='yes' and solar='yes' and state='Texas';\n",
-    "        \"\"\"\n",
-    "\n",
-    "# create a Pandas dataframe with the data from the sql query\n",
-    "df = pd.read_sql_query(sqla.text(query), engine)\n",
-    "df"
+    "#import packages\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import psycopg2\n",
+    "import sqlalchemy as sqla\n",
+    "import os\n",
+    "from config.read_config import get_database_config\n",
+    "from datetime import datetime as dt\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "%matplotlib inline\n",
+    "sys.executable  # shows you your path to the python you're using"
    ]
   },
   {
@@ -96,55 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grab dataids and convert them to a string to put into the SQL query\n",
-    "dataids_list = df['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(dataids_list)))\n",
-    "dataids_str = ','.join(list(map(str, dataids_list)))\n",
-    "dataids_str\n",
-    "dataids_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Assemble the SQL query to pull 1 minute data for the selected dataids for the CP dates mentioned above.\n",
-    " \n",
-    "first_start = event_start_dates.pop(0)\n",
-    "first_end   = event_end_dates.pop(0)\n",
-    "query_2 = \"\"\"\n",
-    "select dataid, localminute,air1,air2,furnace1,furnace2,solar,grid from electricity.eg_realpower_1min \n",
-    "where ((localminute >= '{}' and localminute <= '{}') \"\"\".format(first_start, first_end)\n",
-    "\n",
-    "for start, end in zip(event_start_dates, event_end_dates):\n",
-    "    query_2 = query_2 + \"OR (localminute >= '{}' and localminute <= '{}') \".format(start, end)\n",
-    "\n",
-    "query_2 = query_2 + \"\"\" ) AND dataid in ({})\"\"\".format(dataids_str)\n",
-    "\n",
-    "# here's what that query is\n",
-    "print(\"sql query is \\n\" + query_2)\n",
-    "\n",
-    "# create a dataframe with the data from the sql query\n",
-    "df2 = pd.read_sql_query(sqla.text(query_2), engine)\n",
-    "\n",
-    "df2.head(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Checking completeness of data. We will consider only those homes that have 100% data for the 4CP dates\n",
-    "data = df2.groupby(['dataid']).size().reset_index(name='counts')\n",
-    "data['perc'] = (data['counts']/256)*100\n",
-    "ndata = data[data['perc'] == 100].head(50)\n",
-    "final_dataids = ndata['dataid']\n",
-    "final_dataids.count()\n",
-    "df3=df2.loc[df2['dataid'].isin(final_dataids)]"
+    "#Read pre-processed data \n",
+    "df3 = pd.read_csv('/shared/hvac-4CP.csv')\n",
+    "homes_list = df3.dataid.unique() \n",
+    "homes_list"
    ]
   },
   {
@@ -166,7 +85,11 @@
    "source": [
     "#create new column hvac.(hvac is sum of air compressor and furnace circuits.)\n",
     "df3['hvac'] = df3['air1'] + df3['air2'] + df3['furnace1'] + df3['furnace2']\n",
+    "df3['localminute'] = pd.to_datetime(df3['localminute'])\n",
     "df3['localminute'] = df3['localminute'].dt.date\n",
+    "df3.head(10)\n",
+    "#df3['dt'] = df3['localminute'].dt.date\n",
+    "#df3['localminute'] = df3['localminute'].dt.date\n",
     "df3.head(10)"
    ]
   },
