--- a/whole-use-by-solar.ipynb
+++ b/whole-use-by-solar.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prepare the data we selected 50 Texas homes with PV. We used 1 minute energy(from electricity.eg_realpower_1min) data for the selected homes for March 2018 through August 2018."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,118 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in db credentials from config/config.txt\n",
-    "# * make sure you add those to the config/config.txt file! *\n",
-    "\n",
-    "database_config = get_database_config(\"./config/config.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get our DB connection\n",
-    "engine = sqla.create_engine('postgresql://{}:{}@{}:{}/{}'.format(database_config['username'],\n",
-    "                                                                     database_config['password'],\n",
-    "                                                                     database_config['hostname'],\n",
-    "                                                                     database_config['port'],\n",
-    "                                                                     database_config['database']\n",
-    "                                                                     ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Select a list of Texas homes from dataport metadata that have PV system installed.\n",
-    "query = \"\"\"select distinct dataid from other_datasets.metadata \n",
-    "                                          where solar='yes' and grid='yes'\n",
-    "                                          and egauge_1min_min_time < '2018-01-01' \n",
-    "                                          and egauge_1min_max_time > '2019-01-01'\n",
-    "                                          and state='Texas'\n",
-    "                                          and (egauge_1min_data_availability like '100%' \n",
-    "                                               or \n",
-    "                                               egauge_1min_data_availability like '99%');\n",
-    "         \"\"\"\n",
-    "\n",
-    "df = pd.read_sql_query(sqla.text(query), engine)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grab dataids and convert them to a string to put into the SQL query\n",
-    "dataids_list = df['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(dataids_list)))\n",
-    "dataids_str = ','.join(list(map(str, dataids_list)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Check data completeness for dataids selected from metadata above.\n",
-    "\n",
-    "query2 = \"\"\"select dataid,count(*) total_rec from electricity.eg_realpower_1min \n",
-    "            where dataid in ({})\"\"\".format(dataids_str)\n",
-    "query2 = query2 + \"\"\" and localminute >= '2018-03-01' and localminute < '2018-09-01' group by 1\"\"\"\n",
-    "\n",
-    "df2 = pd.read_sql_query(sqla.text(query2), engine)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#Select 50 homes with atleast 99% data availability for March 2018 through August 2018.\n",
-    "df2['perc'] = (df2['total_rec']/264960)*100\n",
-    "final_dataids = df2[df2['perc'] >= 99].head(50)\n",
-    "final_dataids['dataid'].count()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#List of selected homes \n",
-    "final_dataids_list = final_dataids['dataid'].tolist()\n",
-    "print(\"{} dataids selected listed here:\".format(len(final_dataids_list)))\n",
-    "final_dataids_str = ','.join(list(map(str, final_dataids_list)))\n",
-    "final_dataids_str\n",
-    "final_dataids_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Pull data for selected 50 homes.\n",
-    "data = \"\"\"select dataid,localminute::timestamp,solar,grid \n",
-    "               from electricity.eg_realpower_1min \n",
-    "               where localminute >= '2018-03-01' and localminute <  '2018-09-01' \"\"\"\n",
-    "data = data + \"\"\"AND dataid in ({})\"\"\".format(final_dataids_str)\n",
-    "\n",
-    "# create a dataframe with the data from the sql query\n",
-    "data_df = pd.read_sql_query(sqla.text(data), engine)\n",
-    "\n"
+    "#Read pre-processed data \n",
+    "data_df = pd.read_csv('/shared/whole-use-by-solar.gz', compression='gzip')\n",
+    "homes_list = data_df.dataid.unique() \n",
+    "homes_list"
    ]
   },
   {
@@ -195,7 +94,11 @@
    "outputs": [],
    "source": [
     "# convert localminute to date\n",
-    "data_df['dt'] = data_df['localminute'].dt.normalize()"
+    "#data_df['dt'] = data_df['localminute'].dt.normalize()\n",
+    "\n",
+    "data_df['localminute'] = pd.to_datetime(data_df['localminute'])\n",
+    "data_df['dt'] = data_df['localminute'].dt.date\n",
+    "data_df.head(10)"
    ]
   },
   {
@@ -229,11 +132,15 @@
    "source": [
     "#calculate home's weekly average use powered by solar\n",
     "avg_solar_use_by_week = pd.DataFrame(data_df, columns = ['dt','total_use','use_powered_by_solar'])\n",
+    "avg_solar_use_by_week['dt'] = pd.to_datetime(avg_solar_use_by_week['dt'])\n",
     "avg_solar_use_by_week['week_num'] = avg_solar_use_by_week['dt'].dt.week\n",
+    "#avg_solar_use_by_week['week_num'] = avg_solar_use_by_week['dt'].dt.week\n",
     "avg_solar_use_by_week = avg_solar_use_by_week.groupby(['week_num']).sum()\n",
     "avg_solar_use_by_week = avg_solar_use_by_week.reset_index()\n",
     "avg_solar_use_by_week['use_from_solar'] = (avg_solar_use_by_week['use_powered_by_solar']/avg_solar_use_by_week['total_use'])*100\n",
-    "avg_solar_use_by_week.head(10)"
+    "avg_solar_use_by_week.head(10)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -243,7 +150,7 @@
    "outputs": [],
    "source": [
     "#plot bar chart for average weekly use\n",
-    "new_data_week.plot.bar(x='week_num', y='use_from_solar',figsize=(20,10),color='orange',title=\"Homes's average weekly use powered by solar\")\n",
+    "avg_solar_use_by_week.plot.bar(x='week_num', y='use_from_solar',figsize=(20,10),color='orange',title=\"Homes's average weekly use powered by solar\")\n",
     "plt.show()"
    ]
   },
