changed gas data units

--- a/water_gas_energy.ipynb
+++ b/water_gas_energy.ipynb
@@ -57,6 +57,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert cubic feet to kWh for gas data\n",
+    "df1['gasuse_kwh'] = df1['gasuse'] * 0.293"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#describe data\n",
     "df1.describe()"
    ]
@@ -97,7 +107,7 @@
    "source": [
     "#Plot above calculated data\n",
     "plt.figure(figsize=(20,10))\n",
-    "plt.plot(df2['datetime'],df2['gasuse'],label=\"gas(ft3)\")\n",
+    "plt.plot(df2['datetime'],df2['gasuse_kwh'],label=\"gas(kWh)\")\n",
     "plt.plot(df2['datetime'],df2['wateruse'],label=\"water(gallons)\")\n",
     "plt.plot(df2['datetime'],df2['elecuse'],label=\"energy(kWh)\")\n",
     "#plt.xticks(np.arange(min(df['datetime']), max(df['datetime'])+1, 3))\n",
