Minor instruction updates.

--- a/Efficiency/Efficiency-BTUs.ipynb
+++ b/Efficiency/Efficiency-BTUs.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Something something Efficiency and BTUs:\n"
+    "# Something something Efficiency and BTUs:\n",
+    "\n",
+    "The `Efficiency-BTUs-data.ipynb` notebook in this same directory will also perform the database queries and export the files as zipped csv files to this directory. You would just need to change the `pg.read_csv()` calls to look in the current directory instead of the /shared one."
    ]
   },
   {
