Updated title and took a few comments out.

--- a/Efficiency/Efficiency-BTUs.ipynb
+++ b/Efficiency/Efficiency-BTUs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Something something Efficiency and BTUs:\n",
+    "# Visualization of energy intensity converting electricity use to embedded BTU based on national averages:\n",
     "\n",
     "The `Efficiency-BTUs-data.ipynb` notebook in this same directory will also perform the database queries and export the files as zipped csv files to this directory. You would just need to change the `pg.read_csv()` calls to look in the current directory instead of the /shared one."
    ]
@@ -611,8 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert gallons to kWh via 1,000,000 gallons =  5000kWh for Austin (reduced this is 200g to 1kWh, or divide the gallons by 200 to get kWh)\n",
-    "########### PUT REF HERE!!!!!!!!!!!\n",
+    "# convert gallons to kWh via 1,000,000 gallons =  5000kWh for Austin (reduced this is 200g to 1kWh, or divide the gallons by 200 to get kWh) (include ref?)\n",
     "water_mean['Water BTUs'] = (water_mean['reading_in_gal'] / 200.0) * 3412\n",
     "water_mean"
    ]
@@ -756,20 +755,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Have Scott write something up here. Or maybe Cavan. Welcome aboard Cavan! "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
