Rename that notebook.

--- a/HVAC-Solar-Generation-Alignment.ipynb
+++ b/HVAC-Solar-Generation-Alignment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##This notebook explores how solar generation aligns with in-home HVAC use and what percent of the HVAC energy load is powered by the home’s rooftop solar over each season for one year?"
+    "##This notebook explores how solar generation aligns with in-home HVAC use and what percent of the HVAC energy load is powered by the home’s rooftop solar over each season for one year"
    ]
   },
   {
@@ -340,7 +340,9 @@
    "metadata": {},
    "source": [
     "From above season charts we can see that solar and home's HVAC usage peaks at different times except in winter. \n",
+    "\n",
     "Solar peaks between 12PM-14PM while HVAC usage increases until 7PM and then starts to drop off. \n",
+    "\n",
     "In winter average HVAC usage is almost constant with respect to solar generation.\n",
     "\n",
     "\n",
@@ -365,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
