--- a/Efficiency/Efficiency-Percent-PV-Home-Usage.ipynb
+++ b/Efficiency/Efficiency-Percent-PV-Home-Usage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## In this notebook we will calculate what percent of a home’s average daily energy use is provided by its on-site solar PV-generated power\n",
+    "# Efficiency: What percent of a home’s average daily energy use is provided by its on-site solar PV-generated power\n",
     "\n",
     "To prepare the data we selected 50 Texas homes with PV. We used 1 minute energy(from electricity.eg_realpower_1min) data for the selected homes for March 2018 through August 2018."
    ]
