Limit to dataids and cleanup of outputs.

--- a/Efficiency/Efficiency-BTUs-data.ipynb
+++ b/Efficiency/Efficiency-BTUs-data.ipynb
@@ -76,6 +76,7 @@
     "                                              or\n",
     "                                              gas_data_availability like '7%'\n",
     "                                              )\n",
+    "                                           LIMIT 50\n",
     "                                          ;\n",
     "         \"\"\"\n",
     "\n",
