--- a/Efficiency/Efficiency-BTUs.ipynb
+++ b/Efficiency/Efficiency-BTUs.ipynb
@@ -95,6 +95,7 @@
     "                                              or\n",
     "                                              gas_data_availability like '7%'\n",
     "                                              )\n",
+    "                                           LIMIT 50\n",
     "                                          ;\n",
     "         \"\"\"\n",
     "\n",
