Validate < 50 homes for both. Clear outputs.

--- a/Efficiency/Efficiency-Percent-PV-Home-Usage.ipynb
+++ b/Efficiency/Efficiency-Percent-PV-Home-Usage.ipynb
@@ -21,6 +21,7 @@
     "import psycopg2\n",
     "import sqlalchemy as sqla\n",
     "import os\n",
+    "sys.path.insert(0,'..')\n",
     "from config.read_config import get_database_config\n",
     "from datetime import datetime as dt\n",
     "import numpy as np\n",
