Added note saying how many homes.

--- a/Efficiency/Efficiency-Emissions-Density.ipynb
+++ b/Efficiency/Efficiency-Emissions-Density.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Efficiency Notebooks: Exploring the emissions density of power used by homes\n",
-    "We'll be using data from the Texas ISO, ERCOT, to calculate the emissions amount and emission sources from the generated power used by the electrical grid home usage.\n",
+    "We'll be using data from the Texas ISO, ERCOT, to calculate the emissions amount and emission sources from the generated power used by the electrical grid home usage for 50 homes.\n",
     "\n",
     "Entirely solar equipped homes will be used to demonstrate the interplay between solar generation and emissions during this time period (March - August 2018)\n",
     "\n",
